lib/src/compiler/tests/testdata/errors/26.out
error[E100]: wrong type
 --> line:3:10
  |
3 |      for 3.14 x in (0..10) : (false)
  |          ^^^^ expression should be `integer`, but is `float`
  |